--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="latest">Latest</string>
     <string name="top">Top</string>
     <string name="favorites">Favorites</string>
+    <string name="no_posts_in_saved">No posts in saved</string>
 </resources>
