--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="favorites">Favorites</string>
     <string name="no_posts_in_saved">No posts in saved</string>
     <string name="link_copied">Link copied</string>
+    <string name="delete">Delete</string>
 </resources>
