--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="no_posts_in_saved">No posts in saved</string>
     <string name="link_copied">Link copied</string>
     <string name="delete">Delete</string>
+    <string name="share">Share</string>
 </resources>
